@@ -13,6 +13,10 @@ python-oslo.service (1.8.0-1) unstable; urgency=medium
   * Uploading to unstable.
   * Fixed (build-)depends for this release.
   * Standards-Version: 3.9.7 (no change).
+  * Blacklist 3 unit tests in Py35 only:
+    - EventletServerServiceLauncherTest.test_graceful_stop_with_exceeded_graceful_shutdown_timeout
+    - EventletServerServiceLauncherTest.test_shuts_down_on_sigint_when_client_connected
+    - ServiceLauncherTest.test_child_signal_sighup
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 09:38:20 +0000
 
